fix syntax for endlines

--- a/spec/fixtures/window/syntax/main.html
+++ b/spec/fixtures/window/syntax/main.html
@@ -1,2 +1,15 @@
-<div attr1="1"></div>
-<nonexisting-tag at-tr2='2'></nonexisting-tag>
+<div attr="double-quoted"></div>
+
+<div attr=
+
+<div1 attr="unterminated double-quoted
+<any-other-tag>
+
+<div2 attr='unterminated single-quoted
+<nonexisting-tag at-tr='single-quoted'></nonexisting-tag>
+
+<without-closing-tag>
+<any-other-tag>
+
+<incorrectly-closed></incorrectly-closed
+<any-other-tag>
